--- a/package.json
+++ b/package.json
@@ -29,42 +29,42 @@
   "homepage": "https://github.com/kitware/vtk-js#readme",
   "main": "./dist/vtk.js",
   "dependencies": {
-    "blueimp-md5": "2.13.0",
-    "commander": "5.1.0",
+    "blueimp-md5": "2.18.0",
+    "commander": "6.2.0",
     "gl-matrix": "3.3.0",
-    "jszip": "3.4.0",
+    "jszip": "3.5.0",
     "pako": "1.0.11",
     "seedrandom": "3.0.5",
     "shelljs": "0.8.4",
-    "webvr-polyfill": "0.10.11",
+    "webvr-polyfill": "0.10.12",
     "webworker-promise": "0.4.2",
     "xmlbuilder": "15.1.1"
   },
   "devDependencies": {
     "babel-plugin-istanbul": "6.0.0",
     "dotenv": "8.2.0",
-    "karma": "5.0.2",
+    "karma": "5.2.3",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "2.0.2",
-    "karma-firefox-launcher": "1.3.0",
+    "karma-coverage": "2.0.3",
+    "karma-firefox-launcher": "2.0.0",
     "karma-junit-reporter": "2.0.1",
     "karma-tap": "4.2.0",
     "karma-tap-pretty-reporter": "4.2.0",
     "karma-webpack": "4.0.2",
-    "kw-doc": "1.3.1",
-    "kw-web-suite": "10.0.0",
-    "node-pre-gyp": "0.14.0",
+    "kw-doc": "2.0.0",
+    "kw-web-suite": "11.0.0",
+    "node-pre-gyp": "0.16.0",
     "request": "^2.88.2",
-    "resemblejs": "3.2.4",
+    "resemblejs": "3.2.5",
     "tap-markdown": "1.2.1",
     "tap-spec": "5.0.0",
-    "tape": "5.0.0",
+    "tape": "5.0.1",
     "tape-catch": "1.0.6",
-    "wslink": "0.1.14",
+    "wslink": "0.1.15",
     "xml2js": "0.4.23"
   },
   "peerDependencies": {
-    "wslink": "^0.1.8",
+    "wslink": "0.1.15",
     "shader-loader": "^1.3.1",
     "worker-loader": "^2.0.0"
   },
@@ -77,8 +77,8 @@
     "doc:www": "npm t -- --single-run && kw-doc -c ./Documentation/config.js -s",
     "doc:publish": "kw-doc -c ./Documentation/config.js -mp",
     "example": "node ./Utilities/ExampleRunner/example-runner-cli.js -c ./Documentation/config.js",
-    "build": "webpack-dev-server --config webpack.dev.js",
-    "build:release": "webpack --config webpack.prod.js --progress --hide-modules",
+    "build": "webpack serve --config webpack.dev.js",
+    "build:release": "webpack --config webpack.prod.js --progress",
     "test": "karma start ./karma.conf.js",
     "test:travis": "karma start ./karma.conf.js --browsers ChromeHeadlessNoSandbox --single-run",
     "test:debug": "karma start ./karma.conf.js --no-single-run",
