chore(semantic-release): Specify release branches

--- a/package.json
+++ b/package.json
@@ -112,5 +112,13 @@
     "exclude": [
       "Sources/**/test/*.js"
     ]
+  },
+  "release": {
+    "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "master",
+      "next",
+      "next-major"
+    ]
   }
 }
